--- a/scss/component/_animation.scss
+++ b/scss/component/_animation.scss
@@ -1,21 +1,30 @@
 @keyframes ringing {
+  10% {
+    transform: scale(1.2) rotate(-20deg);
+  }
   20% {
+    transform: scale(1.2) rotate(20deg);
+  }
+  30% {
     transform: scale(1.2) rotate(-20deg);
   }
   40% {
     transform: scale(1.2) rotate(20deg);
   }
+  50% {
+    transform: scale(1.2) rotate(-20deg);
+  }
   60% {
+    transform: scale(1.2) rotate(20deg);
+  }
+  70% {
     transform: scale(1.2) rotate(-20deg);
   }
   80% {
-    transform: scale(1.2) rotate(-20deg);
+    transform: scale(1.2) rotate(20deg);
   }
   90% {
-    transform: scale(1.2) rotate(0deg);
-  }
-  100% {
-    transform: scale(1.2) rotate(0deg);
+    transform: scale(1.2) rotate(-20deg);
   }
 }
 
