--- a/scss/component/_containers.scss
+++ b/scss/component/_containers.scss
@@ -160,7 +160,7 @@ section {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  background-color: #7477bf;
+  background-color: $primary-color;
   width: 90%;
   height: 2rem;
   border-radius: 5px;
