--- a/scss/component/_media-queries.scss
+++ b/scss/component/_media-queries.scss
@@ -49,7 +49,7 @@
   }
   // dashboard
   .main-header {
-    margin-left: 0.5rem;
+    padding-left: 0.5rem;
     font-size: 0.8rem;
   }
   .main-header-search {
